# m-pt1-58-22

./: .coveragerc  .flake8  .gitignore  CODEOWNERS  Makefile  README.md  h  pr.bat  pyproject.toml  pyvenv.cfg
.github/: dependabot.yml
.github/scripts/: qa.sh  validate-contributer.sh
.github/workflows/: qa-macos.yaml  qa-windows.yaml  qa.yaml
Scripts/: activate  activate.bat  activate.fish  activate.nu
app_alexander_sidorov/: apps.py  urls.py  views.py
app_alexander_sidorov/templates/app_alexander_sidorov/: index.html  task01.html
app_alexey_tyuhai/: apps.py  urls.py  views.py
app_alexey_tyuhai/templates/app_alexey_tyuhai/: task01.html
app_andrei_karpuk/: apps.py  urls.py  views.py
app_andrei_karpuk/templates/app_andrei_karpuk/: task01.html  task02.html
app_dmitry_mikhailiuk/: apps.py  urls.py  views.py
app_dmitry_mikhailiuk/templates/app_dmitry_mikhailiuk/: index.html  task01.html  task02.html
app_eugene_bakun/: apps.py  urls.py  views.py
app_eugene_ladyko/: apps.py  urls.py  views.py
app_eugene_lubimov/: apps.py  urls.py  views.py
app_eugene_lubimov/templates/app_eugene_lubimov/: task01.html  task02.html  task03.html  task04.html  task05.html  task06.html
app_eugene_vavilov/: apps.py  urls.py  views.py
app_eugene_vavilov/templates/app_eugene_vavilov/: lesson04.html  lesson04_01.html  lesson04_02.html  lesson04_03.html  lesson04_04.html  lesson06_01.html  lesson06_02.html  lesson06_03.html  lesson06_04.html  lesson06_05.html
app_igor_maksimov/: apps.py  urls.py  views.py
app_igor_maksimov/templates/app_igor_maksimov/: main.html  task01.html  task04_02.html  task04_03.html
app_jana_sergienko/: apps.py  urls.py  views.py
app_jana_sergienko/templates/app_jana_sergienko/: task01.html
app_main/: urls.py  views.py
app_main/templates/app_main/: index.html  main_index.html
app_maksim_baranau/: apps.py  urls.py  views.py
app_maksim_baranau/templates/app_maksim_baranau/: task01.html
app_maksim_lamaka/: apps.py  urls.py  views.py
app_mikita_karmanaw/: apps.py  urls.py  views.py
app_sergey_sakovich/: apps.py  urls.py  views.py
app_vadim_zharski/: apps.py  urls.py  views.py
app_vladislav_yurenya/: apps.py  urls.py  views.py
docs/: 10_oop.ipynb  Lesson 04.md  Lesson 05.md  Lesson 06.md  Lesson 09.md  Lesson 12.md  Lesson 13.md
docs/examples/: functions_01.py  functions_02.py  functions_03.py  functions_04.py  functions_05.py  functions_06.py  functions_07.py
hw/alexander_sidorov/: helloworld.py  helloworld_test.py  helpers.py  helpers_test.py
hw/eugene_bakun/: __init__.py
project/: settings.py  urls.py
tests/: conftest.py  test_students.py
tests/lesson04/: test_task_01.py  test_task_02.py  test_task_03.py  test_task_04.py
(+222 files in other folders)
